--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         ,http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <link rel="stylesheet" href="E:\vs code\font-awesome-4.7.0\css\font-awesome.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.css">
     <title>慕课网</title>
 </head>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
