--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.css">
     <title>慕课网</title>
 </head>
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
+<script src="https://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
 <Script>
     $(document).ready(function () {
         $(window).scroll(function () {
